--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,35 +1,23 @@
-name: Android Release
 
-# 1
+name: CI
+
 on:
-  # 2
   push:
-    branches: test
+    branches:
+      - master
 
-# 4
 jobs:
-  # 5
   build:
-    # 6
     runs-on: ubuntu-latest
-
-    # 7
     steps:
-      # 8
-      - uses: actions/checkout@v3
-      # 9
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
-      # 10
-      - uses: subosito/flutter-action@v2
+          java-version: 12.x
+      - uses: subosito/flutter-action@v1
+      - run: flutter pub get
+      - run: flutter build apk
+      - uses: actions/upload-artifact@v1
         with:
-          # 11
-          channel: 'stable'
-      # 12
-      - name: Get dependencies
-        run: flutter pub get
-
-      # Runs a set of commands using the runners shell
-      - name: Start release build
-        run: flutter build apk
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
