--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 12.x
       - uses: subosito/flutter-action@v1
       - run: flutter pub get
-      - run: flutter build apk
+      - run: flutter build apk --release
       - uses: actions/upload-artifact@v1
         with:
           name: release-apk
