--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -8,16 +8,18 @@ on:
 
 jobs:
   build:
+    name: Build and Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
+          distribution: 'zulu'
           java-version: 12.x
       - uses: subosito/flutter-action@v1
       - run: flutter pub get
-      - run: flutter build apk --release
-      - uses: actions/upload-artifact@v1
+      - run: flutter build apk --release --split-per-abi
+        name: Push to Releases
+        uses: ncipollo/release-action@v1
         with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+          artifacts: "build/app/outputs/apk/release/*"
