--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,25 +1,38 @@
-
-name: CI
-
 on:
+  pull_request:
+    branches:
+      - main
+      - master
   push:
     branches:
       - test
-
+name: "Build & Release"
 jobs:
   build:
-    name: Build and Release
+    name: Build & Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: 12.x
-      - uses: subosito/flutter-action@v1
-      - run: flutter pub get
+          java-version: '12'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
+
       - run: flutter build apk --release --split-per-abi
-        name: Push to Releases
+      - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*"
+
+
+
+
+
+
+
+# push to master, main, develop
+# pull request on main master
