--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,24 @@
 allprojects {
+    ext.kotlin_version = '1.9.3'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.4.2'
+
+    }
+
+}
+
+allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
-
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
