--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Build APK for Test Branch
         if: github.ref == 'refs/heads/test'
-        run: flutter build apk --release --split-per-abi -t lib/main_dev.dart --flavor dev
+        run: flutter build apk --debug
 
       - name: Build APK for Prod Branch
         if: github.ref == 'refs/heads/prod'
-        run: flutter build apk --release --split-per-abi -t lib/main_prod.dart --flavor prod
+        run: flutter build apk --release
 
       - name: Push to Releases
         uses: ncipollo/release-action@v1
