--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
-allprojects {
-    ext.kotlin_version = '1.9.3'
+buildscript {
+    ext.kotlin_version = '1.9.25'
     repositories {
         google()
         mavenCentral()
